correccion de codigo

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
 
             <input type="text" placeholder="Nombre de la película" id="title"><br>
             <input type="text" placeholder="Nombre del Director" id="director"><br>
-            <input type="text" placeholder="Año de estreno" id="year"><br>
-            <input type="text" placeholder="Rating" id="Rating"><br>
+            <input type="number" placeholder="Año de estreno" id="year"><br>
+            <input type="number" placeholder="Rating" id="rating"><br>
             <input type="text" placeholder="Enlace de imagen" id="imgURL"><br>
             <button onclick="nuevaPelicula()">Agregar película</button>
 
@@ -31,7 +31,7 @@
     </div>
 
 
-
+    <script src="nuevaPelicula.js"></script>
     <script src="index.js"></script>
 </body>
 
