se agrego funcion para modificar y eliminar peliculas

--- a/index.html
+++ b/index.html
@@ -26,11 +26,19 @@
         </div>
     </div>
     <br>
-    <div id="container">
+    <div id="container"></div>
 
-    </div>
+    <dialog id="modal" class="modal">
+        <div class="modal-content">
+            <p>Que quieres hacer?</p>
+            <button id="deleteBtn">Borrar</button>
+            <button id="modifyBtn">Modificar</button>
+        </div>
+    </dialog>
 
 
+    <script src="modifyMovie.js"></script>
+    <script src="deleteMovie.js"></script>
     <script src="nuevaPelicula.js"></script>
     <script src="index.js"></script>
 </body>
