se acomodo el codigo, se separo en funciones.

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <input type="number" placeholder="Año de estreno" id="year"><br>
             <input type="number" placeholder="Rating" id="rating"><br>
             <input type="text" placeholder="Enlace de imagen" id="imgURL"><br>
-            <button onclick="nuevaPelicula()">Agregar película</button>
+            <button id="newMovie">Agregar película</button>
 
         </div>
     </div>
